overflow issue lvl 5 #1 solved

--- a/style.css
+++ b/style.css
@@ -179,21 +179,6 @@ width:100%;
 }
 
 
-/* #nav:after:hover{
-    animation:navfull 2s forwards;
-} */
-
-/* @media screen and (max-width:600px) {
-
-    .container-fluid{
-        height:auto;
-    }
-
-    .card-img-top{
-        display:none;
-    }
-    
-} */
 
 
 @media  screen and (max-width:500px) {
@@ -226,5 +211,6 @@ width:100%;
         left:50%;
         transform:translate(-50%,0);
         opacity:0.9;
+        overflow-x:scroll;
     }
 }
